Correct the endpoint URL

--- a/cdecl/index.html
+++ b/cdecl/index.html
@@ -190,7 +190,7 @@ span.arrow {
 <script type="text/javascript" src="js/livesearch.js"></script>
 <script type="text/javascript">
 
- var QUERY_ENDPOINT = "https://yw1h3k82xa.execute-api.us-east-1.amazonaws.com/prod/cdecl_lambda";
+ var QUERY_ENDPOINT = "https://xwd733f66f.execute-api.us-west-1.amazonaws.com/prod/cdecl_backend";
  var QUERYLESS_URL = location.protocol + '//' + location.host + location.pathname;
 
  $(document).ready(function(){
@@ -378,9 +378,6 @@ var pageTracker = _gat._getTracker("UA-15181739-1");
 pageTracker._trackPageview();
 } catch(err) {}
 
-// set text_result
-// set searcher 
-// set permalink
 </script>
 </body>
 </html>
