Point to github as source code link

--- a/cdecl/index.html
+++ b/cdecl/index.html
@@ -292,7 +292,7 @@ function demo(ind) {
 	  <div id="dark_top"></div>
 	  <div id="dark"></div>
 	  <div id="help">
-	      <a href="/files/cdecl-blocks-2.5.tar.gz">Source Code</a>
+	      <a href="https://github.com/ridiculousfish/cdecl-blocks">Source Code</a>
 	  </div>
 	  <div id="examples">
 		<div id="example_instructions">
